force-app/main/default/objects/DX_Error_Log__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>