force-app/main/default/objects/DX_Error_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Flow_Name__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Method_Name__c</columns>
    <columns>Object_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>